typescript/checker/tests/conformance/decorators/class/constructableDecoratorOnClass01.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/class/constructableDecoratorOnClass01.ts:5:1
  |
5 | @CtorDtor
  | ^

